--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 class="mb-0">Ana
           <span class="text-primary">Nurdiana</span>
         </h1>
-        <div class="subheading mb-5">Cibening · Bungursari · Purwakarta · 41181 ·
+        <div class="subheading mb-5">Purwakarta · Jawa Barat · Indonesia · 41181 ·
           <a href="mailto:ananurdiana@email.com">ananurdiana@email.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
