--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Analysis Programmer</h3>
-            <div class="subheading mb-3">PT UTAC Manufacturing Services Indonesia</div>
+            <!--<div class="subheading mb-3">PT UTAC Manufacturing Services Indonesia</div>-->
+            <div class="subheading mb-3">Manufacturing Company</div>
             <p>Development program and maintenance Manufacturing Execution System.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -110,7 +111,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Funding Officer</h3>
-            <div class="subheading mb-3">Bank BTN Purwakarta</div>
+            <!--<div class="subheading mb-3">Bank BTN Purwakarta</div>-->
+            <div class="subheading mb-3">National Bank</div>
             <!-- <p>Customer relationship.</p> -->
           </div>
           <div class="resume-date text-md-right">
@@ -121,7 +123,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Teacher</h3>
-            <div class="subheading mb-3">LPIA Purwakarta</div>
+            <!--<div class="subheading mb-3">LPIA Purwakarta</div>-->
+            <div class="subheading mb-3">Course Instituion</div>
             <p>Teach Java Programming Language, PHP Programming Language, MySQL DBMS, Microsoft Office (Word, Excel, PowerPoint)</p>
           </div>
           <div class="resume-date text-md-right">
