--- a/jasmine.327/index.html
+++ b/jasmine.327/index.html
@@ -11,7 +11,7 @@
 
 <script>
 setTimeout(()=>{
-window.location.href = 'bit.ly/j327-wa';
+window.location.href = 'http://bit.ly/j327-wa';
 }, 3000);
 </script>
 
